--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,32 @@
 /* Basic CSS for index.html */
 body {
     font-family: Arial, sans-serif;
-    background-color: #242424;
+    background-color: #000000;
     margin: 0;
     padding: 0;
-    color: #efe8e5;
+    color: #000000;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.rounded-square-container {
+        width: 100vw; 
+        height: 100vh;
+        border: 2px solid #333; /* Optional: Add a border for visibility */
+        border-radius: 20px; /* Adjust this value to control the roundness of the corners */
+        background-color: #e1e1e1; /* Optional: Add a background color */
+        box-sizing: border-box; /* Ensures padding and border are included in the width/height */
+        overflow: hidden; /* Important if content might extend beyond rounded corners */
+}
+
+.uploading-form {
+    background-color:#ffffff;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.thecontent-itself {
+    margin: 2vh;
+    justify-self: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,13 +44,14 @@ a:hover {
 }
 
 button {
-    color:#efe8e5;
+    color:#000000;
+    border: #ffffff;
     border-radius: 9px;
-    background-color: #242424;
+    background-color: #ffffff;
     padding: 2px;
-    padding-inline: 10px;
+    padding-inline: 20px;
+    padding-block: 20px;
     box-shadow: none;
-    outline: 2px solid rgb(255, 255, 255);
     margin-right: 3px;
     margin-left: 3px;
 }
