--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,7 @@ body {
     background-color:#ffffff;
     border-radius: 20px;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 .thecontent-itself {
@@ -81,6 +82,15 @@ button {
     padding: 30px;
     border-radius: 4px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+}
+.rounded-thumbnail {
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 9px;
+}
+
+.scrollerJIOJIOIOJIJIO {
+    background-color: #007acc;
 }
 
 
